@@ -10,19 +10,19 @@ AUX i2pd.logrotate 270 SHA256 cac89d98a0c2eff2eeedb323b3b81c3e316293f80d3397bfeb
 AUX i2pd.service 412 SHA256 afc2b4a72e3bec2c45a838971375a1e8a438bc9cb09a082f138583e226ee8402 SHA512 99ec3dbe7c983d732c483207f49a9b9456c83c17b76605f663fb177142e09e11e0e3fe4e10ffaaca3b9e08519a055ab5efee4117b6e977d22ec80c6aa7c3d3eb WHIRLPOOL dc47e828a8a457e16e16ff5dae50c73fdeaa6a79d36d2f2d4e44919e06e222a2b14d0677c77ef2d471107d8ce669ad499172656f3985bee18697f2725df2e95e
 DIST i2pd-0.5.0.tar.gz 352460 SHA256 7f2033fe1c380c458722d68f611d0fa69a844ceba71db13a918adac6e01a0594 SHA512 08c51dc5fa3712af54b7dcc9f4524fb19d7b42a279646c7852efdf1fd49cf4ea24192c936229954c3733ba4bcbc480205bcfeca739ffae3642f5c62bd24e0cf6 WHIRLPOOL 1812a8733f17cd6b9885cf8af3ad0412f238356121118d46fbed53cb826aaa6c878a045adb69e0a692fd5cd3fc720192c635f4e594d3d42efb2116f14bbba9e9
 DIST i2pd-0.6.0.tar.gz 360829 SHA256 149a8c2d870ebc3988aea06eec906c9e968b3d89ae282bd3b2b5ead205f7c3b7 SHA512 084c75c5f972dbc07740119c3ae1711924cf740391703a95752164eab7a04d6cea0cfb302530e1e1bebafb54f9eed552e747479ae55fb053e824cdf059ab3266 WHIRLPOOL a858a49173755e052f31a95f4f7075965dac0c89943a7dc05c3c88d51b646ab86a7510a9533e33d9c5f0e7736e9f702f6fd0de4e6a841cc3ec57ea5aaf2b991c
-EBUILD i2pd-0.5.0.ebuild 1845 SHA256 d359c5eae64a9421cb831938eee3d4d8a484cd872169b40c0b93bda40b7b2420 SHA512 f2844531b16a4be3609bda365326354d3ecae205434bffe4eaa2e5b4177f723e97be2ae1d222bb9a28d6e40c015dea09071bccc7b2a7faa9ceb23009b32b6cdb WHIRLPOOL e1d8c5c591479d80f5912a7d5bf0e17b1b0f0323260506862a03000d345aaded6bc9172e5cecdc24a9a3804316175a81665f1a18724431ca4c6074d7ae2a900f
-EBUILD i2pd-0.6.0.ebuild 1882 SHA256 8bf8e74e0d6df36d791964ab62d943d348ec60dcf192dcf4a7edfe8f78ea6b83 SHA512 79e343eedcb4f5940973e251275973159fba4c71e205a4ca029eb37c4ebbf54df893655a3ac897ef972a98fbbbc2aec09ac01a1ea95aee8be4bcb1307e883fb0 WHIRLPOOL 30c1032a9561f21e6b926b6af1bc39374032b7ae2a3f6d8c6aba0da612e5603be0184204722b427bb8cd9b735a74922577e171edca64e8a220fef0c9aa82f33a
-EBUILD i2pd-9999.ebuild 2313 SHA256 c0e1c345d04eb3052f43a419c25222f25aa673435c213215ec181817c60dfa2b SHA512 664a1b9e573919898406a1cda8ab1b9d4e166b47ebd253a4605ce5bef984f34b8f352c8849c1b700954b5e16c87eaf9a8f3e40834badbb5b36a805b5b106fc12 WHIRLPOOL c021c2a6bbd3962765741120c149a59074a0e3509202f22e186edae37705d93f4739dab53b2d9fd410ed8e81596cc447a87d6439e9ac75e4bb2f3537fe3b7a4e
-MISC ChangeLog 1492 SHA256 f3c31070c1683aabc1693b0019f3d321b8475725a6191eb7f81fc5cee6d27e1f SHA512 0f3c7abe79f3e45edcd8c21dd429471bea3cffe24acc2e38974aae89d661b0a96d7ef1a8a1a75978389caebad265a255012471d87681cf6dac3ac3e1993281d5 WHIRLPOOL 20c0b2fb57f1a6011c667d3189a8be4769585c1a5dfe607807d4d1cf3c2adc99a4ac11b6e50b7e0506026efd0b82b26df75c84bda85668148e9e8f30309938e8
-MISC metadata.xml 505 SHA256 94805fb4a94ff250fb81c585d9088f9575b6cef36b717bee72a566fe7a9d13aa SHA512 c4ff8b6c0535316934c77fd3c5249481a4c2a619a4f743b7f7784ff25e1b2839690239581c1d92b4176d4369c4f6a5a488f206c3ed6cc0433843e08b1f2c20f5 WHIRLPOOL 8231dfd31bdbc80c375f3efc8f190c10bd208c553e070ae3181bcf3d7e0760b540877a90f347080c43984c6a6a3815e91f5e211972058b444869b43b82c7e710
+EBUILD i2pd-0.5.0.ebuild 1962 SHA256 64cb6f1abadfc1de30b736d32cc7b5df97eb52919d7861e9488af557b575c2c2 SHA512 9311d77bcae0eba96ff141e1224caa9a9c78f428b477c48aa5f3fb3f390cb50fc8be708445524ea96ccfd7d093c7c483c43cd0b09d90cc365d48278f3368b6f4 WHIRLPOOL 535e3ddd5b6487e2afb58d3f98b75e500da71d17a4f9028459155491c24babad67926e1b6b96751d79f2c8fb3352e3169bba511befd53187660b02c412abe0c1
+EBUILD i2pd-0.6.0.ebuild 1999 SHA256 8b11c3246aedb9c51d8cf0ea24f834d4900eba02ea886cc8bf938ce5f0895200 SHA512 804bd79fa4b5235609562d9983be5b1edd4f2538413112489e7247eee991e159ec0d5a8dab96770b867a0ba0c51d048f4c70f21fdb186bd6133c2feab2ebb79d WHIRLPOOL c09db2b296f4acf8ead0c65c352b8ef5a486ef5ebda54ae04293bb54758083c22078e0aa881be60ca8c4924f061655c478703c2f865378fa297c557a7c1843b2
+EBUILD i2pd-9999.ebuild 2418 SHA256 c25b3dc79729114b840da6542adac517ed31480ff60ae818b1f9219717563cfe SHA512 0a205e42de682b35f48160bf21c6a679fd1d8d73bc92ee69b4f7d750fea8bafb7a18dd4644d433b3d1c577203608a055111677ed7d7c96a0d7a02d4f705404f5 WHIRLPOOL abe650d2f0b0947413cc8b8be15b9f0b6852020ec705f03e209169dcba6c6efacc28efb6313644964ace4e94155ba17fa692c05bd3c5587b376d594a4262401a
+MISC ChangeLog 1636 SHA256 51b26efa752cd8795de70ab869befa6bd3462aa9f96547225d51d43f1830cb0b SHA512 397239e3f15ed8294e0d2fe71d5f48f87552f9c57e3b27c3fee09c9092d103c380dfcc71a0ac2f8dd65332e606a230fc6b3a36052c91622fe33532394f612313 WHIRLPOOL 4bca850cc84060545a0f8117bed6dc9106bc26ed605a06a83bc0fac0b2e7763ffd78d0eb3f8c618f5858edce752c365924c2af071107111fda8ec6e63facbb10
+MISC metadata.xml 424 SHA256 c7959b9cb11a07bde564c8574b349cb7652a5dd3575145b571dc9ed4f09ee7c2 SHA512 0cb4f7e9490b757429932f11ed6845c67fd5dbd4fbcba1485c30e3a46c3c41157daa32a1f36a1e196e7f8c485ae51eb1586d0f14c4986a0ce043f07e44f12bb3 WHIRLPOOL b81a673b6e4a32d9af6e382f66eae6a6d62dbe21af00785b4d0fa557a34041178b8f43bc616151dbe75ce9fe8752367f22cf4311ee6579da614f83ce96dfd45e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUrTYaAAoJEKXBodJLEo5SHsgIAM+A35FzdxLL4RmqkvazEyx2
-+ZTgQ56MUtP7bVBS8VlsHxolEVOCI+8Xayk99OoSX8tpIdiBENnrhprHFMu3QNql
-uq0QISoceXYIeTcPXd/H8+kSmiIw1QnIJa3dLSPJFsl1VHSr+OdkB+J+m42AGqsP
-K/iw1hPTNUvjuEleHBsqkUcKvHJA7dNAYCOXJS8UcrR8PmATQiv64hMbG/yeRUWn
-jIDNUgScjd0l0SPWlbNvGdL/+tVQ5rfawI4e0E89RSNIuCLFmrzQcQ6nLYqN4zqj
-5Oj9bo6eR4Oy+jQyVnB0oumU3sF2B0kenWXuzN2l2EKlpD2RBnGpduFW1RULtt4=
-=bnoT
+iQEcBAEBCAAGBQJU1jWpAAoJEKXBodJLEo5S2hcIAIEPRpgOytKBQw9JrjwrkdEw
+rV1ALHQdyqB6fLKS3XP1KqTyTk1U+ObQmvhgKrgG1BpnYoOmgsGSZ41GRzWJt+13
+5fNG6+oT4mD9i3U+ABJ6yv5DWWoDTw0AeghDjJOpcGqyN3aCiDjCMmoUicmqO3jT
+Uac44o2dRSB+gwh7bnLjktA5110JBUOgnDkkgrbmFYgdTb/Kqgr7f0VoymWaEV7n
+49k6fnmlwdvXEw2B76YW8BhqAXzQ+2mAvf/aq9rMRX+BGKZLqyUQ17WaUnIso36s
+tMz+2Xrl61nczQzX2e1VIVO4vAg/TO5u01GW/TbtERJ2g2yiB6qYn6nqdDqVymg=
+=Yd6i
 -----END PGP SIGNATURE-----
