@@ -6,9 +6,6 @@
 		<name>Francisco Blas Izquierdo Riera</name>
 	</maintainer>
 	<use>
-		<flag name="aesni">
-			Enable support for the AES-NI instruction set
-		</flag>
 		<flag name="i2p-hardening">
 			Compile with hardening on vanilla compilers/linkers
 		</flag>
